<resources>
    <string name="app_name">IPGProjFinal</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="create_new_account">Create New Account</string>
    <string name="add_image">Add Image</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="select_user">Select User</string>
    <string name="selecionar_usu_rio">Selecionar usuário</string>
    <string name="digite_uma_mensagem">Digite uma mensagem</string>
    <string name="online">Online</string>
</resources>